[package]
name = "eld"
version = "0.0.1"
edition = "2021"
rust-version = "1.85"
description = "🚛 ELD Toolkit for WASM frameworks like Yew, Dioxus, and Leptos."
license = "MIT"
keywords = ["eld", "yew", "dioxus", "leptos"]
categories = ["web-programming", "embedded", "wasm"]
repository = "https://github.com/opensass/eld"
documentation = "https://docs.rs/eld/"
homepage = "https://github.com/opensass/eld"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
readme = "README.md"
exclude = ["assets", "examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.27"
web-sys = { version = "0.3.77", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "Window", "Document"] }
yew = { version = "0.21.0", default-features = false, optional = true }
dioxus = { version = "0.6.3", optional = true }
leptos = { version = "0.7.8", optional = true }

[features]
yew = ["dep:yew"]
dio = ["dioxus"]
lep = ["leptos"]

[profile.release]
opt-level = "z"
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
bump2version = "0.1.4"
